# paperpile-search

./: .gitignore  README.md  pyproject.toml
skills/: paperpile.md
src/paperpile_search/: cli.py  library.py  ranker.py
